fix overflow menu on small screens

--- a/src/components/menu-style.scss
+++ b/src/components/menu-style.scss
@@ -64,6 +64,28 @@
   }
 }
 
+@media (max-height: 680px) and (max-width: 380px) {
+  .menu-ctn {
+    top: 0.5rem;
+
+    .logo {
+      width: 50px;
+      height: 50px;
+      
+      img {
+        width: 50px;
+        height: 50px;
+      }
+    }
+  }
+}
+
+@media (max-width: 320px) {
+  .menu-ctn {
+    top: 1rem;
+  }
+}
+
 .sticky-menu-ctn {
   position: fixed;
   background-color: $grey_light;
